@@ -1,0 +1,1 @@
+MSH|^~\&|MESA_OF|XYZ_RADIOLOGY|MESA_IM|XYZ_RADIOLOGY|||ADT^A40|101161|P|2.3.1||||||||EVN||200004211000||||200004210950PID|||583220^^^ADT1||DOE^J2|||M||AI||||||||20983210||||||||||||MRG|T9020^^^OF1|||T9020^^^OF1|||SUNDAY^J1
