@@ -1,0 +1,1 @@
+MSH|^~\&|MESA_OF|XYZ_RADIOLOGY|MESA_IM|XYZ_IMAGE_MANAGER|||ORM^O01|101106|P|2.3.1||||||||PID|||583020^^^ADT1||WHITE^CHARLES||19980704|M||AI|7616 STANFORD AVE^^ST. LOUIS^MO^63130|||||||20981701||||||||||||PV1||E||||||5101^NELL^FREDERICK^P^^DR|||||||||||V1002^^^ADT1|||||||||||||||||||||||||200004210950||||||||ORC|NW|A101Z^MESA_ORDPLC|B101Z^MESA_ORDFIL||SC||1^once^^^^S||200004210950|^ROSEWOOD^RANDOLPH||7101^ESTRADA^JAIME^P^^DR||3145551212|200004210950||922229-10^IHE-RAD^IHE-CODE-231||OBR|1|A101Z^MESA_ORDPLC|B101Z^MESA_ORDFIL|P1^Procedure 1^ERL_MESA^X1_A1^SP Action Item X1_A1^DSS_MESA|||||||||xxx||Radiology^^^^R|7101^ESTRADA^JAIME^P^^DR||MOF5000|RP1000|SPS2000||||MR|||1^once^^^^S|||WALK|||||||||||A||ZDS|1.113654.3.13.1000^100^Application^DICOM
